--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   circular_countdown_timer: ^0.2.0
   flutter_slidable: ^0.6.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
